# kokkos-comm

./: .clang-format  .clang-format-ignore  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: linux.yaml
.github/workflows/: docs-build.yml  docs-deploy.yml  formatting.yaml  linux-compileonly.yaml  linux-install.yaml  linux-mdspan.yaml  linux.yaml  osx-mdspan.yaml  osx.yaml  sphinx.yml
cmake/: Config.cmake.in  FindNCCL.cmake  KokkosComm_config.hpp.in  KokkosComm_version.hpp.in  flags.cmake
docs/: CONTRIBUTING.rst  conf.py  design.rst  index.rst  requirements.txt
docs/api/: collective.rst  core.rst  core_isend.cpp  core_recv.cpp  core_send.cpp  mpi.rst  p2p.rst  packing.rst  traits.rst
docs/dev/: contributing.rst  docs.rst  testing.rst
docs/usage/: getting_started.rst  performance_tests.rst
perf_tests/: CMakeLists.txt  test_2dhalo.cpp  test_main.cpp  test_osu_latency.cpp  test_osu_latency_isendirecv.cpp  test_osu_latency_sendrecv.cpp  test_sendrecv.cpp  test_utils.hpp
perf_tests/mpi/: CMakeLists.txt  test_2dhalo.cpp  test_main.cpp  test_osu_latency.cpp  test_sendrecv.cpp  test_utils.hpp
src/: CMakeLists.txt  KokkosComm.hpp  KokkosComm_CommModes.hpp  KokkosComm_collective.hpp  KokkosComm_comm_mode.hpp  KokkosComm_communicator.hpp  KokkosComm_concepts.hpp  KokkosComm_config.hpp  KokkosComm_defaults.hpp  KokkosComm_fwd.hpp  KokkosComm_mode.hpp  KokkosComm_pack_traits.hpp  KokkosComm_plan.hpp  KokkosComm_point_to_point.hpp  KokkosComm_reducer.hpp  KokkosComm_request.hpp  KokkosComm_traits.hpp  KokkosComm_view_traits.hpp
src/KokkosComm/: CMakeLists.txt  KokkosComm.hpp  collective.hpp  concepts.hpp  fwd.hpp  point_to_point.hpp  reduction_op.hpp  traits.hpp  wait.hpp
src/KokkosComm/impl/: KokkosComm_contiguous.hpp  allgather.hpp  recv.hpp  reduce.hpp  send.hpp
src/KokkosComm/mpi/: allgather.hpp  alltoall.hpp  barrier.hpp  commmode.hpp  handle.hpp  irecv.hpp  isend.hpp  mpi.hpp  recv.hpp  reduce.hpp  req.hpp  send.hpp
src/KokkosComm/mpi/impl/: pack_traits.hpp  packer.hpp  types.hpp  wait.hpp
src/KokkosComm/nccl/: allgather.hpp  handle.hpp  nccl.hpp  recv.hpp  reduce.hpp  req.hpp  send.hpp
src/KokkosComm/nccl/impl/: pack_traits.hpp  packer.hpp  types.hpp
src/impl/: KokkosComm_InvokableHolder.hpp  KokkosComm_MPI_instance.hpp  KokkosComm_NonContigCtx.hpp  KokkosComm_NonContig_Datatypes.hpp  KokkosComm_NonContig_Deepcopy.hpp  KokkosComm_NonContig_Deepcopy_Alltoall.hpp  KokkosComm_NonContig_Deepcopy_Reduce.hpp  KokkosComm_NonContig_Deepcopy_SendRecv.hpp  KokkosComm_NonContig_MultiMessage.hpp  KokkosComm_ViewHolder.hpp  KokkosComm_allgather.hpp  KokkosComm_allocate.hpp  KokkosComm_allreduce.hpp  KokkosComm_alltoall.hpp  KokkosComm_api.hpp  KokkosComm_barrier.hpp  KokkosComm_base.hpp  KokkosComm_concepts.hpp  KokkosComm_contiguous.hpp  KokkosComm_iallreduce.hpp  KokkosComm_include_mpi.hpp  KokkosComm_irecv.hpp  KokkosComm_ireduce.hpp  KokkosComm_isend.hpp  KokkosComm_isendrecv.hpp  KokkosComm_mdspan.hpp  KokkosComm_mode.hpp  KokkosComm_mpi.hpp  KokkosComm_pack.hpp  KokkosComm_packed_size.hpp  KokkosComm_packer.hpp  KokkosComm_packtraits.hpp  KokkosComm_recv.hpp  KokkosComm_reduce.hpp  KokkosComm_request.hpp  KokkosComm_request_impl.hpp  KokkosComm_send.hpp  KokkosComm_sendrecv.hpp  KokkosComm_types.hpp  KokkosComm_unpack.hpp
src/mpi/: KokkosComm_mpi.hpp  KokkosComm_mpi_allgather.hpp  KokkosComm_mpi_alltoall.hpp  KokkosComm_mpi_barrier.hpp  KokkosComm_mpi_commmode.hpp  KokkosComm_mpi_handle.hpp  KokkosComm_mpi_irecv.hpp  KokkosComm_mpi_isend.hpp  KokkosComm_mpi_plan.hpp  KokkosComm_mpi_recv.hpp  KokkosComm_mpi_reduce.hpp  KokkosComm_mpi_req.hpp  KokkosComm_mpi_send.hpp
src/mpi/impl/: KokkosComm_include_mpi.hpp  KokkosComm_mpi_irecv_datatype.hpp  KokkosComm_mpi_irecv_deepcopy.hpp  KokkosComm_mpi_isend_datatype.hpp  KokkosComm_mpi_isend_deepcopy.hpp  KokkosComm_pack_traits.hpp  KokkosComm_packer.hpp  KokkosComm_tags.hpp  KokkosComm_types.hpp
unit_tests/: CMakeLists.txt  compileonly_view_traits.cpp  test_allgather.cpp  test_allreduce.cpp  test_alltoall.cpp  test_barrier.cpp  test_gtest_mpi.cpp  test_iallreduce.cpp  test_ireduce.cpp  test_irsendrecv.cpp  test_isendirecv.cpp  test_isendrecv.cpp  test_issendrecv.cpp  test_main.cpp  test_mpi.cpp  test_reduce.cpp  test_rsendrecv.cpp  test_send.cpp  test_sendrecv.cpp  test_ssendrecv.cpp  view_builder.hpp
unit_tests/cmake/: gtest_a7f443b8.patch
unit_tests/mpi/: test_allgather.cpp  test_alltoall.cpp  test_isendrecv.cpp  test_mpi.cpp  test_mpi_view_access.cpp  test_reduce.cpp  test_sendrecv.cpp  test_waitall.cpp  test_waitany.cpp
unit_tests/nccl/: test_nccl.cpp
